fixed GitHub link in footer

--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ footer:
       url: "https://twitter.com/_th3y"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/mcorybillington"
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/mcorybillington/"
